[BBS-164] Compute NER inter-rater agreement in DVC pipeline (#152)
Co-authored-by: Francesco Casalegno <francesco.casalegno@gmail.com>

--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -244,3 +244,25 @@ stages:
     - eval.PATHWAY
     metrics:
     - ../../metrics/ner/pathway.json
+  interrater:
+    cmd: python interrater.py --annotations1 ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl,../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+      --annotations2 ../../annotations/ner/annotations11_CharlotteLorin_2020-08-28_raw1_10EntityTypes.jsonl,../../annotations/ner/annotations13_CharlotteLorin_2020-09-02_raw7_10EntityTypes.jsonl
+      --output_dir ../../metrics/ner/interrater/
+    deps:
+    - ../../annotations/ner/annotations10_EmmanuelleLogette_2020-08-28_raw1_raw5_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations11_CharlotteLorin_2020-08-28_raw1_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations12_EmmanuelleLogette_2020-08-28_raw7_10EntityTypes.jsonl
+    - ../../annotations/ner/annotations13_CharlotteLorin_2020-09-02_raw7_10EntityTypes.jsonl
+    - Dockerfile
+    - interrater.py
+    metrics:
+    - ../../metrics/ner/interrater/cell_compartment.json
+    - ../../metrics/ner/interrater/cell_type.json
+    - ../../metrics/ner/interrater/chemical.json
+    - ../../metrics/ner/interrater/condition.json
+    - ../../metrics/ner/interrater/disease.json
+    - ../../metrics/ner/interrater/drug.json
+    - ../../metrics/ner/interrater/organ.json
+    - ../../metrics/ner/interrater/organism.json
+    - ../../metrics/ner/interrater/pathway.json
+    - ../../metrics/ner/interrater/protein.json
