Enable black in tox

--- a/tox.ini
+++ b/tox.ini
@@ -21,28 +21,26 @@ commands =
 [testenv:lint]
 skip_install = true
 deps =
-    bandit
-    black
-    flake8
-    isort
-    pydocstyle
+;    bandit
+    black==20.8b1
+    flake8==3.8.4
+    isort==5.6.4
+    pydocstyle==5.1.1
 commands =
     flake8 {[tox]source} tests
     isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
-    black -q --check setup.py
-;    black -q --check {[tox]source} tests
+    black -q --check setup.py {[tox]source} tests
 ;    bandit -q -r {[tox]source}
 
 [testenv:format]
 skip_install = true
 deps =
-    black
-    isort
+    black==20.8b1
+    isort==5.6.4
 commands =
     isort --profile=black setup.py {[tox]source} tests
-    black setup.py
-;    black {[tox]source} tests
+    black setup.py {[tox]source} tests
 
 [testenv:docs]
 changedir = docs
@@ -112,7 +110,8 @@ show_missing = False
 
 [flake8]
 count = False
-max-line-length = 120
+max-line-length = 88
+extend-ignore = E203
 
 [pydocstyle]
 convention = numpy
