--- a/data_and_models/pipelines/sentence_embedding/params.yaml
+++ b/data_and_models/pipelines/sentence_embedding/params.yaml
@@ -14,7 +14,7 @@ eval:
   biobert_nli_sts:
     class: SentTransformer
     init_kwargs:
-      checkpoint_path: clagator/biobert_v1.1_pubmed_nli_sts
+      model_name_or_path: clagator/biobert_v1.1_pubmed_nli_sts
   tf_idf:
     class: SklearnVectorizer
     init_kwargs:
@@ -30,7 +30,7 @@ eval:
   sbert:
     class: SentTransformer
     init_kwargs:
-      checkpoint_path: bert-base-nli-mean-tokens
+      model_name_or_path: bert-base-nli-mean-tokens
   sbiobert:
     class: SBioBERT
     init_kwargs: {}
