--- a/data_and_models/pipelines/sentence_embedding/params.yaml
+++ b/data_and_models/pipelines/sentence_embedding/params.yaml
@@ -10,11 +10,11 @@ eval:
   bsv:
     class: BSV
     init_kwargs:
-      checkpoint_model_path: ../../models/sentence_embedding/bsv/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
+      checkpoint_path: ../../models/sentence_embedding/bsv/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
   biobert_nli_sts:
     class: SentTransformer
     init_kwargs:
-      model_name: clagator/biobert_v1.1_pubmed_nli_sts
+      model_name_or_path: clagator/biobert_v1.1_pubmed_nli_sts
   tf_idf:
     class: SklearnVectorizer
     init_kwargs:
@@ -30,7 +30,7 @@ eval:
   sbert:
     class: SentTransformer
     init_kwargs:
-      model_name: bert-base-nli-mean-tokens
+      model_name_or_path: bert-base-nli-mean-tokens
   sbiobert:
     class: SBioBERT
     init_kwargs: {}
