Add flag for doctest

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ changedir = docs
 extras = dev
 # set warnings as errors using the -W sphinx option
 commands =
-    make doctest
+    make doctest SPHINXOPTS=-W
     make html SPHINXOPTS=-W
 allowlist_externals = make
 
