--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ changedir = docs
 extras = dev
 # set warnings as errors using the -W sphinx option
 commands =
+    make clean
     make doctest SPHINXOPTS=-W
     make html SPHINXOPTS=-W
 allowlist_externals = make
