--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ cache:
     directories:
         - $HOME/.cache/pip
 
+env:
+  - VIRTUALENV_PIP="20.2.4"
+
 matrix:
   include:
     - stage: Lint and Code Style
