Ignore python2 bandit error

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
-    bandit -q -r {[tox]source}
+    bandit -c .bandit -q -r {[tox]source}
 
 [testenv:format]
 skip_install = true
