--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands =
 [testenv:lint]
 skip_install = true
 deps =
-;    bandit
+    bandit
     black==20.8b1
     flake8==3.8.4
     isort==5.6.4
@@ -32,7 +32,7 @@ commands =
     isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
-;    bandit -q -r {[tox]source}
+    bandit -c .bandit -q -r {[tox]source}
 
 [testenv:format]
 skip_install = true
