Add a new remote to dvc

--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = gpfs_ssh
 ['remote "gpfs_ssh"']
     url = ssh://bbpv1.bbp.epfl.ch/gpfs/bbp.cscs.ch/data/project/proj115/dvc_remote_storage/
+['remote "gpfs_local"']
+    url = /gpfs/bbp.cscs.ch/data/project/proj115/dvc_remote_storage
