--- a/.env.example
+++ b/.env.example
@@ -56,4 +56,4 @@ BBS_MINING_MYSQL_PASSWORD=guest
 BBS_MINING_CACHE_TARGET_TABLE=mining_cache_temporary
 BBS_MINING_CACHE_PROCESSORS_PER_MODEL=1
 BBS_MINING_CACHE_LOG_FILE=mining_cache_creation.log
-BBS_MINING_VERBOSE=2
+BBS_MINING_VERBOSE=-vv
