Undo isort noqa

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ deps =
     black==20.8b1
     isort==5.6.4
 commands =
-    isort --profile=black setup.py {[tox]source} tests
+    isort --honor-noqa --profile=black setup.py {[tox]source} tests
     black setup.py {[tox]source} tests
 
 [testenv:docs]
