isort noqa everywhere

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
     pydocstyle==5.1.1
 commands =
     flake8 {[tox]source} tests
-    isort --profile black --check setup.py {[tox]source} tests
+    isort --honor-noqa --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
     bandit -c .bandit.yml -q -r {[tox]source}
