Move the folder and fix tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -81,12 +81,12 @@ commands =
         --benchmark-group-by=func \
         --no-cov \
         --benchmark-min-rounds=1 \
-        --embedding_server={env:EMBEDDING_SERVER:} \
-        --mining_server={env:MINING_SERVER:} \
-        --mysql_server={env:MYSQL_SERVER:} \
-        --search_server={env:SEARCH_SERVER:} \
+        --embedding_server="{env:EMBEDDING_SERVER:}" \
+        --mining_server="{env:MINING_SERVER:}" \
+        --mysql_server="{env:MYSQL_SERVER:}" \
+        --search_server="{env:SEARCH_SERVER:}" \
         {posargs} \
-        tests/benchmarks
+        benchmarks
 
 [pytest]
 testpaths = tests
@@ -96,7 +96,6 @@ addopts =
     --cov
     --cov-config=tox.ini
     --no-cov-on-fail
-    --benchmark-skip
     --durations=20
     --verbosity=1
     --last-failed-no-failures=all
