Use python 3.6 everywhere

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ commands =
     black setup.py {[tox]source} tests
 
 [testenv:docs]
+basepython = python3.6
 changedir = docs
 extras = dev
 # set warnings as errors using the -W sphinx option
@@ -56,6 +57,7 @@ commands =
 allowlist_externals = make
 
 [testenv:check-packaging]
+basepython = python3.6
 deps =
     wheel
     twine
