[BBS-221] Fix broken CI on Jenkins (isort error) (#188)
* NOQA vs noqa
* Set basepython to 3.6 
* Comment on SciBERT secret side-effects

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     pytest {posargs:tests}
 
 [testenv:lint]
+basepython = python3.6
 skip_install = true
 deps =
     bandit==1.6.3
@@ -29,21 +30,23 @@ deps =
     pydocstyle==5.1.1
 commands =
     flake8 {[tox]source} tests
-    isort --profile black --check setup.py {[tox]source} tests
+    isort --honor-noqa --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
     bandit -c .bandit.yml -q -r {[tox]source}
 
 [testenv:format]
+basepython = python3.6
 skip_install = true
 deps =
     black==20.8b1
     isort==5.6.4
 commands =
-    isort --profile=black setup.py {[tox]source} tests
+    isort --honor-noqa --profile=black setup.py {[tox]source} tests
     black setup.py {[tox]source} tests
 
 [testenv:docs]
+basepython = python3.6
 changedir = docs
 extras = dev
 # set warnings as errors using the -W sphinx option
@@ -54,6 +57,7 @@ commands =
 allowlist_externals = make
 
 [testenv:check-packaging]
+basepython = python3.6
 deps =
     wheel
     twine
