--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,6 @@ commands =
     pytest {posargs:tests}
 
 [testenv:lint]
-basepython = python3.6
 skip_install = true
 deps =
     bandit==1.6.3
@@ -28,12 +27,14 @@ deps =
     flake8==3.8.4
     isort==5.6.4
     pydocstyle==5.1.1
+    mypy=0.790
 commands =
     flake8 {[tox]source} tests
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
     bandit -c .bandit.yml -q -r {[tox]source}
+    mypy --config-file .mypy.ini  setup.py {[tox]source} tests
 
 [testenv:format]
 basepython = python3.6
