--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-;ignore_missing_imports = True
+ignore_missing_imports = True
 no_implicit_optional = True
 check_untyped_defs = True
 strict_equality = True
@@ -9,4 +9,3 @@ show_error_codes = True
 
 [mypy-bbsearch.*]
 check_untyped_defs=False
-
