--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
     flake8==3.8.4
     isort==5.6.4
     pydocstyle==5.1.1
-    mypy=0.790
+    mypy==0.790
 commands =
     flake8 {[tox]source} tests
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests
