--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,11 @@ matrix:
     - stage: Tests and Coverage
       python: 3.6
       env: TOXENV=py36
-    - python: 3.7
+    - if: type = push
+      python: 3.7
       env: TOXENV=py37
-    - python: 3.8
+    - if: type = push
+      python: 3.8
       env: TOXENV=py38
 
     - stage: Docs
