--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
       env: TOXENV=lint
 
     - stage: Tests and Coverage
-      python: 3.7
-      env: TOXENV=py37
+      python: 3.9
+      env: TOXENV=py39
     - if: type = push
       python: 3.8
       env: TOXENV=py38
@@ -45,6 +45,7 @@ before_install:
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - sudo apt-get install gfortran libopenblas-dev liblapack-dev
 
 install:
   - pip install tox
