--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 ignore_missing_imports = True
 no_implicit_optional = True
-check_untyped_defs = False
+check_untyped_defs = True
 strict_equality = True
 warn_redundant_casts = True
 warn_unused_ignores = True
