[run travis] Upgrade bandit to 1.7.0

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
 basepython = python3.7
 skip_install = true
 deps =
-    bandit==1.6.3
+    bandit==1.7.0
     black==20.8b1
     flake8==3.8.4
     isort==5.6.4
@@ -34,7 +34,7 @@ commands =
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests
-    bandit -c .bandit.yml -q -r {[tox]source}
+    bandit -qr {[tox]source}
     mypy --config-file .mypy.ini  setup.py {[tox]source} tests
 
 [testenv:format]
