--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ PyYAML==5.3.1
 SQLAlchemy==1.3.19
 Sphinx==3.2.1
 cryptography==3.1.1
-dash==1.16.2
 dash-cytoscape==0.2.0
 dash-daq==0.5.0
 dash-table==4.10.1
+dash==1.16.2
 docker==4.3.1
 dvc[ssh]==1.10.2
 faiss-cpu==1.6.3
@@ -36,6 +36,7 @@ numpy==1.18.5
 pandas==1.1.2
 pdfkit==0.6.1
 pillow==7.2.0
+pyarrow==1.0.1
 pycodestyle==2.6.0
 pymysql==0.10.1
 pytest-cov==2.10.1
@@ -53,8 +54,7 @@ spacy==2.3.1
 sphinx-bluebrain-theme==0.2.3
 sseclient==0.0.27
 tensorflow-hub==0.9.0
-tensorflow==2.3.1
+tf-nightly
 torch==1.6.0
 tox==3.20.0
 transformers==3.0.2
-pyarrow==1.0.1
