--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,17 @@ matrix:
       env: TOXENV=lint
 
     - stage: Tests and Coverage
-      python: 3.7
+      if: type = push
+      python: 3.6
+      env: TOXENV=py36
+    - python: 3.7
       env: TOXENV=py37
     - if: type = push
       python: 3.8
       env: TOXENV=py38
-    - if: type = push
-      python: 3.9
-      env: TOXENV=py39
+#    - if: type = push
+#      python: 3.9
+#      env: TOXENV=py39
 
     - stage: Docs
       python: 3.7
