Rename envvar MYSQL_URL to DB_URL

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ BBS_SEARCH_MODELS_PATH=./trained_models
 BBS_SEARCH_EMBEDDINGS_PATH=assets/embeddings.h5
 BBS_SEARCH_MODELS=BSV,SBioBERT
 
-BBS_SEARCH_MYSQL_URL=<host>:<port>/<database>
+BBS_SEARCH_DB_URL=<host>:<port>/<database>
 BBS_SEARCH_MYSQL_USER=guest
 BBS_SEARCH_MYSQL_PASSWORD=guest
 
@@ -46,7 +46,7 @@ BBS_MINING_LOG_FILE=bbs_mining.log
 BBS_MINING_DB_TYPE=mysql
 
 BBS_MINING_SQLITE_DB_PATH=database.db
-BBS_MINING_MYSQL_URL=<host>:<port>/<database>
+BBS_MINING_DB_URL=<host>:<port>/<database>
 BBS_MINING_MYSQL_USER=guest
 BBS_MINING_MYSQL_PASSWORD=guest
 
