--- a/tox.ini
+++ b/tox.ini
@@ -31,12 +31,13 @@ deps =
     pydocstyle==5.1.1
     mypy==0.790
 commands =
-    flake8 {[tox]source} tests
-    isort --honor-noqa --profile black --check setup.py {[tox]source} tests
+    flake8 {[tox]source} tests benchmarks
+    isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
     pydocstyle {[tox]source}
-    black -q --check setup.py {[tox]source} tests
+    black -q --check setup.py {[tox]source} tests benchmarks
     bandit -qr {[tox]source}
     mypy --config-file .mypy.ini  setup.py {[tox]source} tests
+    mypy --config-file .mypy.ini  {[tox]source} benchmarks
 
 [testenv:format]
 basepython = python3.7
@@ -45,8 +46,8 @@ deps =
     black==20.8b1
     isort==5.6.4
 commands =
-    isort --honor-noqa --profile=black setup.py {[tox]source} tests
-    black setup.py {[tox]source} tests
+    isort --honor-noqa --profile=black setup.py {[tox]source} tests benchmarks
+    black setup.py {[tox]source} tests benchmarks
 
 [testenv:docs]
 basepython = python3.7
