Generate API docs in tox/CI

--- a/tox.ini
+++ b/tox.ini
@@ -68,13 +68,17 @@ commands =
 
 [testenv:docs]
 basepython = python3.7
-changedir = docs
 extras = dev
 # set warnings as errors using the -W sphinx option
 commands =
-    make clean
-    make doctest SPHINXOPTS=-W
-    make html SPHINXOPTS=-W
+    make -C docs clean
+    sphinx-apidoc -Tef \
+      -o docs/source/api \
+      src/bbsearch \
+      src/bbsearch/entrypoint/* \
+      src/bbsearch/version.py
+    make -C docs doctest SPHINXOPTS=-W
+    make -C docs html SPHINXOPTS=-W
 allowlist_externals = make
 
 [testenv:check-packaging]
