Add type checks and Fix type errors for NumPy

--- a/tox.ini
+++ b/tox.ini
@@ -48,6 +48,7 @@ deps =
     pydocstyle==5.1.1
     mypy==0.790
     pandas-stubs==1.0.4.2
+    git+https://github.com/numpy/numpy-stubs
 commands =
     flake8 {[tox]source} tests benchmarks
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
