Add type checks and Fix type errors for SQLAlchemy

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ deps =
     mypy==0.790
     pandas-stubs==1.0.4.2
     git+https://github.com/numpy/numpy-stubs
+    sqlalchemy-stubs==0.4
 commands =
     flake8 {[tox]source} tests benchmarks
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
