--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,9 @@ deps =
     isort==5.6.4
     pydocstyle==5.1.1
     mypy==0.790
+    pandas-stubs==1.0.4.2
+    git+https://github.com/numpy/numpy-stubs
+    sqlalchemy-stubs==0.4
 commands =
     flake8 {[tox]source} tests benchmarks
     isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
