Complete integration of user creation

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ BBS_HTTPS_PROXY=
 BBS_http_proxy=
 BBS_https_proxy=
 
-BBS_USERS="user1/id1,user2/id2"
+BBS_USERS=user1/id1,user2/id2
 #------------------------------------------------------------------------------
 # Container - search server
 #------------------------------------------------------------------------------
