Adjust tox.ini [run travis]

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-source = src/bbsearch
+source = src/bluesearch
 envlist =
     lint
     py36
