Replace in all occurances of git grep
PyCharm refactor is not that powerful
[run travis]

--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ addopts =
     --last-failed-no-failures=all
 
 [coverage:run]
-source = bbsearch
+source = bluesearch
 branch = True
 
 [coverage:report]
