--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -1,4 +1,18 @@
 stages:
+  eval_biobert_nli_sts_cord19_v1:
+    cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      --model=biobert_nli_sts_cord19_v1 --output_dir=../../metrics/sentence_embedding
+    deps:
+      - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+      - Dockerfile
+      - eval.py
+    params:
+      - eval.biobert_nli_sts_cord19_v1
+    outs:
+      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.csv
+      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.png
+    metrics:
+      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.json
   eval_biobert_nli_sts:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=biobert_nli_sts --output_dir=../../metrics/sentence_embedding
